// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OboComponent 1`] = `
<div
  className="component"
  data-focussed={false}
  data-id="testId"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.Text"
  id="obo-testId"
  model={
    Object {
      "children": null,
      "content": Object {
        "textGroup": Array [
          Object {
            "data": Object {
              "align": "left",
              "indent": 0,
            },
            "text": Object {
              "styleList": null,
              "value": "",
            },
          },
        ],
      },
      "id": "testId",
      "index": 0,
      "metadata": Object {},
      "type": "ObojoboDraft.Chunks.Text",
    }
  }
  moduleData={
    Object {
      "focusState": Object {},
    }
  }
  tag="div"
>
  Test
</div>
`;

exports[`OboComponent tag 1`] = `
<pre
  className="component"
  data-focussed={false}
  data-id="testId"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.Text"
  id="obo-testId"
  model={
    Object {
      "children": null,
      "content": Object {
        "textGroup": Array [
          Object {
            "data": Object {
              "align": "left",
              "indent": 0,
            },
            "text": Object {
              "styleList": null,
              "value": "",
            },
          },
        ],
      },
      "id": "testId",
      "index": 0,
      "metadata": Object {},
      "type": "ObojoboDraft.Chunks.Text",
    }
  }
  moduleData={
    Object {
      "focusState": Object {},
    }
  }
  tag="pre"
>
  Test
</pre>
`;
